# kuka_iiqka_ros

./: .gitignore  README.md
ros_ws/src/kuka_eki_bridge/: CMakeLists.txt  package.xml
ros_ws/src/kuka_eki_bridge/config/: kuka_eki.yaml
ros_ws/src/kuka_eki_bridge/include/kuka_eki_bridge/: eki_bridge_runtime.h  eki_frame.h  eki_mock_server.h  eki_session_core.h  eki_stream_splitter.h  tcp_client_transport.h
ros_ws/src/kuka_eki_bridge/src/: eki_bridge_node.cpp  eki_bridge_runtime.cpp  eki_frame.cpp  eki_mock_server.cpp  eki_mock_server_main.cpp  eki_session_core.cpp  eki_stream_splitter.cpp  tcp_client_transport.cpp
ros_ws/src/kuka_eki_bridge/test/: test_eki_bridge_runtime.cpp  test_eki_frame.cpp  test_eki_mock_server.cpp  test_eki_session_core.cpp  test_tcp_client_transport.cpp
ros_ws/src/kuka_mujoco_sim/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros_ws/src/kuka_mujoco_sim/launch/: mujoco_sim.launch
ros_ws/src/kuka_mujoco_sim/models/: kuka_kr20_scene.xml  kuka_tcp_scene.xml
ros_ws/src/kuka_mujoco_sim/scripts/: run_scenarios.py  sim_node  viewer_node
ros_ws/src/kuka_mujoco_sim/src/kuka_mujoco_sim/: frame_conventions.py  mujoco_world.py  rsi_codec.py  rsi_endpoint.py  scenarios.py  sim_node.py  sri_codec.py  sri_endpoint.py  viewer_node.py
ros_ws/src/kuka_mujoco_sim/test/: e2e_compliance_smoke.py  test_frame_conventions.py  test_gravity_equivalence.py  test_mount_override.py  test_mujoco_world.py  test_rsi_codec.py  test_rsi_endpoint.py  test_scenarios.py  test_sri_codec.py  test_sri_endpoint.py
ros_ws/src/kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
ros_ws/src/kuka_rsi_hw_interface/config/: kuka_rsi.yaml
ros_ws/src/kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: cartesian_command_interface.h  command_limiter.h  kuka_rsi_robot_hw.h  rsi_frame.h  rsi_mock_core.h  rsi_mock_server.h  rsi_session_monitor.h  udp_transport.h
ros_ws/src/kuka_rsi_hw_interface/launch/: kuka_rsi.launch
ros_ws/src/kuka_rsi_hw_interface/src/: command_limiter.cpp  kuka_rsi_hw_interface_node.cpp  kuka_rsi_robot_hw.cpp  kuka_rsi_sim_server_main.cpp  rsi_frame.cpp  rsi_mock_core.cpp  rsi_mock_server.cpp  rsi_session_monitor.cpp  udp_transport.cpp
ros_ws/src/kuka_rsi_hw_interface/test/: test_cartesian_interfaces.cpp  test_command_limiter.cpp  test_kuka_rsi_robot_hw.cpp  test_rsi_frame_parse.cpp  test_rsi_frame_serialize.cpp  test_rsi_integration.cpp  test_rsi_mock.cpp  test_rsi_session_monitor.cpp  test_udp_transport.cpp
ros_ws/src/soft_force_control_core/: CMakeLists.txt  package.xml
ros_ws/src/soft_force_control_core/include/soft_force_control_core/: adaptive_deadband.h  auto_retare.h  compliance_law.h  force_torque_filter.h  frame_resolver.h  mode_manager_core.h  rotation.h  (+5 more)
ros_ws/src/soft_force_control_core/src/: adaptive_deadband.cpp  auto_retare.cpp  compliance_law.cpp  force_torque_filter.cpp  frame_resolver.cpp  mode_manager_core.cpp  orientation_motion_core.cpp  payload_estimator.cpp  safety_limiter.cpp  tool_gravity_compensator.cpp
ros_ws/src/soft_force_control_core/test/: test_adaptive_deadband.cpp  test_auto_retare.cpp  test_compliance_law.cpp  test_filter.cpp  test_frame_resolver.cpp  test_gravity_compensator.cpp  test_mode_manager.cpp  test_orientation_motion.cpp  test_payload_estimator.cpp  test_rotation.cpp  test_safety_limiter.cpp
ros_ws/src/soft_force_control_manager/: CMakeLists.txt  package.xml
ros_ws/src/soft_force_control_manager/config/: calibration.yaml  manager.yaml
ros_ws/src/soft_force_control_manager/src/: calibration_sequencer.cpp  manager_node.cpp  manager_runtime.cpp  payload_yaml.cpp  system_state_core.cpp
ros_ws/src/soft_force_control_manager/test/: test_calibration_sequencer.cpp  test_manager_runtime.cpp  test_payload_yaml.cpp  test_system_state_core.cpp
ros_ws/src/soft_robot_bringup/: CMakeLists.txt  README.md  package.xml
ros_ws/src/soft_robot_bringup/config/: .gitignore
ros_ws/src/soft_robot_bringup/launch/: sim.launch  soft_robot.launch
ros_ws/src/soft_robot_bringup/scripts/: load_payload_then_exec.sh  run_mock.sh  switch_controller_filter.py
ros_ws/src/soft_robot_controllers/: CMakeLists.txt  package.xml  soft_robot_controllers_plugins.xml
ros_ws/src/soft_robot_controllers/config/: soft_robot_controllers.yaml
ros_ws/src/soft_robot_controllers/src/: cartesian_correction_controller.cpp  controller_mode_gate.cpp  direct_correction_core.cpp  force_compliance_controller.cpp  force_compliance_core.cpp
ros_ws/src/soft_robot_controllers/test/: test_cartesian_correction_controller.cpp  test_controller_chain.cpp  test_controller_mode_gate.cpp  test_direct_correction_core.cpp  test_fcc_adaptive_retare.cpp  test_fcc_orientation_sum.cpp  test_fcc_tool_frame.cpp  test_force_compliance_controller.cpp  test_force_compliance_core.cpp  test_mode_bridge.cpp
ros_ws/src/soft_robot_msgs/: CMakeLists.txt  package.xml
ros_ws/src/soft_robot_msgs/action/: CalibratePayload.action  MoveToOrientation.action
ros_ws/src/soft_robot_msgs/msg/: CartesianCorrection.msg  CartesianCorrectionStamped.msg  CartesianState.msg  EkiState.msg  ManagerState.msg  ModeCommand.msg  ModeState.msg  RsiState.msg  SriStatus.msg
ros_ws/src/soft_robot_msgs/srv/: GetTool.srv  SetEkiMode.srv  SetFilter.srv  SetToolBase.srv  StartServo.srv
ros_ws/src/soft_robot_msgs/test/: test_msgs.cpp
ros_ws/src/soft_robot_web_interface/: CMakeLists.txt  README.md  package.xml
ros_ws/src/soft_robot_web_interface/launch/: web.launch
ros_ws/src/soft_robot_web_interface/scripts/: serve_www.sh
ros_ws/src/soft_robot_web_interface/www/: index.html
ros_ws/src/sri_force_torque_driver/: CMakeLists.txt  package.xml
ros_ws/src/sri_force_torque_driver/config/: sri_ft.yaml
ros_ws/src/sri_force_torque_driver/src/: sri_driver_node.cpp  sri_driver_runtime.cpp  sri_frame.cpp  sri_mock_server.cpp  sri_mock_server_main.cpp  sri_stream_session.cpp  tcp_client_transport.cpp
ros_ws/src/sri_force_torque_driver/test/: test_sri_driver_runtime.cpp  test_sri_frame.cpp  test_sri_mock_server.cpp  test_sri_stream_session.cpp  test_tcp_client_transport.cpp
(+63 files in other folders)
