<?xml version="1.0"?>
<package format="2">
  <name>kuka_mujoco_sim</name>
  <version>0.1.0</version>
  <description>MuJoCo physics validation environment for the force-compliance
    controller. Impersonates RSI/SRI wire protocols; zero changes to existing
    packages.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>soft_robot_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
