<?xml version="1.0"?>
<package format="2">
  <name>soft_robot_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, configuration loading, and smoke-test documentation for
    the soft robot system (spec section 5.8): real-robot and simulated
    (three-mock) bringup entries.
  </description>
  <maintainer email="dev@example.com">ljj</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kuka_rsi_hw_interface</exec_depend>
  <exec_depend>kuka_eki_bridge</exec_depend>
  <exec_depend>sri_force_torque_driver</exec_depend>
  <exec_depend>soft_robot_controllers</exec_depend>
  <exec_depend>soft_force_control_manager</exec_depend>
</package>
