<?xml version="1.0"?>
<package format="2">
  <name>soft_robot_msgs</name>
  <version>0.1.0</version>
  <description>
    Shared message, service, and action definitions for the KUKA RSI soft
    force control system. Units follow the project convention: mm, deg
    (KUKA A/B/C = Z-Y-X Euler), N, Nm. Wrench data deliberately reuses
    geometry_msgs/WrenchStamped and is not redefined here.
  </description>
  <maintainer email="dev@example.com">ljj</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
